--- a/index.html
+++ b/index.html
@@ -2,4 +2,17 @@
 layout: default
 ---
 
-hello world
+<div class="container no-padding">
+    <div class="row">
+        <div class="col-xs-12 col-sm-12">
+            <img src="http://placekitten.com/1500/500" class="center-block img-responsive" alt="TODO">
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <h2>Placeholder Text</h2>
+    <p class="text-justify">
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    </p>
+</div>
