--- a/location/index.html
+++ b/location/index.html
@@ -1,3 +1,39 @@
 ---
 layout: default
 ---
+
+<div class="container">
+    <div class="row bottom-rule">
+        <div class="col-sm-6 footer-section">
+            <strong>Hours of Operation</strong><br>
+            <div class="row">
+                <div class="col-xs-3 col-sm-3">
+                    Monday<br>
+                    Tuesday<br>
+                    Wednesday<br>
+                    Thursday<br>
+                    Friday<br>
+                    Saturday<br>
+                    Sunday<br>
+                </div>
+                <div class="col-xs-9 col-sm-9">
+                    8:30AM-9PM<br>
+                    8:30AM-9PM<br>
+                    8:30AM-9PM<br>
+                    8:30AM-9PM<br>
+                    8:30AM-9PM<br>
+                    9AM-9PM<br>
+                    9AM-9PM<br>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 footer-section">
+            <address>
+                <strong>Y-Not Foods</strong><br>
+                501 Ellice Ave<br>
+                Winnipeg, MB, R3B 1Y8<br>
+                (204) 774-0058<br>
+            </address>
+        </div>
+    </div>
+</div>
