--- a/location/index.html
+++ b/location/index.html
@@ -36,4 +36,23 @@ layout: default
             </address>
         </div>
     </div>
+
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: 49.8929119, lng: -97.1540434};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 17,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzEhg8G4N3i0uCnsdRStIYxwpE-0fhHUw&callback=initMap">
+    </script>
+
 </div>
