Add placeholder images

--- a/korean/index.html
+++ b/korean/index.html
@@ -1,3 +1,25 @@
 ---
 layout: default
 ---
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <img src="http://www.placecage.com/c/640/800" class="img-responsive" alt="TODO">
+        </div>
+        <div class="col-sm-6">
+            <h3>Header</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Putabam equidem satis, inquit, me dixisse. Nondum autem explanatum satis, erat, quid maxime natura vellet. Ait enim se, si uratur, Quam hoc suave! dicturum. Omnia peccata paria dicitis. Quae contraria sunt his, malane? Duo Reges: constructio interrete.
+
+Quis hoc dicit? Multoque hoc melius nos veriusque quam Stoici. Fatebuntur Stoici haec omnia dicta esse praeclare, neque eam causam Zenoni desciscendi fuisse. Cupiditates non Epicuri divisione finiebat, sed sua satietate. Nam Pyrrho, Aristo, Erillus iam diu abiecti. Dulce amarum, leve asperum, prope longe, stare movere, quadratum rotundum. Beatus autem esse in maximarum rerum timore nemo potest. Stoici scilicet. Quid ergo attinet gloriose loqui, nisi constanter loquare?
+
+Honesta oratio, Socratica, Platonis etiam. Parvi enim primo ortu sic iacent, tamquam omnino sine animo sint.
+
+Ne tum quidem te respicies et cogitabis sibi quemque natum esse et suis voluptatibus? Quo plebiscito decreta a senatu est consuli quaestio Cn. Sed nimis multa. Cur post Tarentum ad Archytam? An eiusdem modi? Ex quo, id quod omnes expetunt, beate vivendi ratio inveniri et comparari potest.
+
+At ille pellit, qui permulcet sensum voluptate. Quae cum magnifice primo dici viderentur, considerata minus probabantur. Claudii libidini, qui tum erat summo ne imperio, dederetur. Etenim semper illud extra est, quod arte comprehenditur. At ego quem huic anteponam non audeo dicere; Scaevolam M. Numquam facies. Bona autem corporis huic sunt, quod posterius posui, similiora.
+            </p>
+        </div>
+    </div>
+</div>
