Add text on homepage

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@ layout: default
 </div>
 
 <div class="container">
-    <h2>Placeholder Text</h2>
+    <h2>Y-Not Foods</h2>
     <p class="text-justify">
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        Y-Not Foods is a neighbourhood corner store located across from the Duckworth Centre at the University of Winnipeg.<br />
+        <br>Our convenient location is perfect for students looking for a snack before class, a post-workout drink, and much more! We carry all your essential groceries in addition to a few oriental snacks.<br />
+        <br>We are delighted to be a part of Winnipeg’s Downtown community and aim to provide you with the best service possible!<br />
+        <br><small>-Yong & Sunny </small>
     </p>
 </div>
