--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,3 +1,19 @@
 ---
 layout: default
 ---
+<div class="container no-padding">
+    <div class="row">
+        <div class="col-xs-12 col-sm-12">
+            <img src="{{ site.baseurl }}/pictures/storefront.JPG" class="center-block img-responsive" alt="TODO"
+            style="height:500px;">
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <h2>Services</h2>
+    <p class="text-justify">
+      Y-Not Foods carriers all your essential groceries and much more! The store offers lottery tickets, scratch tickets, and tobacco.
+      <br>An ATM machine is also available within the store.
+    </p>
+</div>
