--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,17 +3,23 @@ layout: default
 ---
 
 <div class="container">
-    <div class="row">
+  <div class="row margin">
+      <div class="col-sm-12">
+          <img src="{{ site.baseurl }}/pictures/momsolo.JPG" class="img-responsive" alt="TODO">
+      </div>
+  </div>
+    <div class="row margin-top">
         <div class="col-sm-6">
-            <img src="http://placecage.com/c/600/400" class="img-responsive" alt="TODO">
+            <img src="{{ site.baseurl }}/pictures/fruitsAndveg.JPG" class="img-responsive data-rotate="90" alt="TODO">
         </div>
         <div class="col-sm-6">
-             <img src="http://baconmockup.com/600/400/" class="img-responsive" alt="TODO">
+             <img src="{{ site.baseurl }}/pictures/atm.JPG" class="img-responsive" alt="TODO">
         </div>
     </div>
     <div class="row margin-top">
         <div class="col-sm-12">
-            <img src="http://www.placecage.com/c/1200/600" class="img-responsive" alt="TODO">
+            <img src="{{ site.baseurl }}/pictures/folgers.JPG" class="img-responsive" alt="TODO">
         </div>
     </div>
+
 </div>
