--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: default
 <div class="container no-padding">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
-            <img src="http://placekitten.com/1500/500" class="center-block img-responsive" alt="TODO">
+            <img src="pictures/sunnyAndyong.JPG" class="center-block img-responsive" alt="TODO"
+            style="height:500px;">
         </div>
     </div>
 </div>
@@ -13,8 +14,8 @@ layout: default
 <div class="container">
     <h2>Y-Not Foods</h2>
     <p class="text-justify">
-        Y-Not Foods is a neighbourhood corner store located across from the Duckworth Centre at the University of Winnipeg.<br />
-        <br>Our convenient location is perfect for students looking for a snack before class, a post-workout drink, and much more! We carry all your essential groceries in addition to a few oriental snacks.<br />
+        Y-Not Foods is a neighbourhood corner store located across from the Duckworth Centre at the University of Winnipeg.
+        <br>Our convenient location is perfect for students looking for a snack before class, a post-workout drink, and much more!<br />
         <br>We are delighted to be a part of Winnipeg’s Downtown community and aim to provide you with the best service possible!<br />
         <br><small>-Yong & Sunny </small>
     </p>
