Fix mobile margin

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,8 +4,7 @@ layout: default
 <div class="container no-padding">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
-            <img src="{{ site.baseurl }}/pictures/storefront.JPG" class="center-block img-responsive" alt="TODO"
-            style="height:500px;">
+            <img src="{{ site.baseurl }}/pictures/storefront.JPG" class="center-block img-responsive" alt="TODO"">
         </div>
     </div>
 </div>
