--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ layout: default
 <div class="container no-padding">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
-            <img src="pictures/sunnyAndyong.JPG" class="center-block img-responsive" alt="TODO"
-            style="height:500px;">
+            <img src="pictures/sunnyAndyong.JPG" class="center-block img-responsive" alt="TODO"">
         </div>
     </div>
 </div>
