--- a/about-us/index.html
+++ b/about-us/index.html
@@ -12,7 +12,7 @@ layout: default
 <div class="container">
     <h2>Services</h2>
     <p class="text-justify">
-      Y-Not Foods carriers all your essential groceries and much more! The store offers lottery tickets, scratch tickets, and tobacco.
+      Y-Not Foods carries all your essential groceries and much more! The store offers lottery tickets, scratch tickets, and tobacco.
       <br>An ATM machine is also available within the store.
     </p>
 </div>
