--- a/gallery/index.html
+++ b/gallery/index.html
@@ -10,7 +10,7 @@ layout: default
   </div>
     <div class="row margin-top">
         <div class="col-sm-6">
-            <img src="{{ site.baseurl }}/pictures/fruitsAndveg.JPG" class="img-responsive data-rotate="90" alt="TODO">
+            <img src="{{ site.baseurl }}/pictures/fruitsAndveg.JPG" class="img-responsive" alt="TODO">
         </div>
         <div class="col-sm-6 mobile-margin">
              <img src="{{ site.baseurl }}/pictures/atm.JPG" class="img-responsive" alt="TODO">
