Add alt text to pictures

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container no-padding">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
-            <img src="{{ site.baseurl }}/pictures/storefront.JPG" class="center-block img-responsive" alt="TODO"">
+            <img src="{{ site.baseurl }}/pictures/storefront.JPG" class="center-block img-responsive" alt="Storefront of Y-Not Foods">
         </div>
     </div>
 </div>
