--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container no-padding">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
-            <img src="{{ site.baseurl }}/pictures/sunnyAndyong.JPG" class="center-block img-responsive" alt="TODO"">
+            <img src="{{ site.baseurl }}/pictures/sunnyAndyong.JPG" class="center-block img-responsive" alt="Owners in front of store mural">
         </div>
     </div>
 </div>
