--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,20 +5,20 @@ layout: default
 <div class="container">
   <div class="row margin">
       <div class="col-sm-12">
-          <img src="{{ site.baseurl }}/pictures/momsolo.JPG" class="img-responsive" alt="TODO">
+          <img src="{{ site.baseurl }}/pictures/momsolo.JPG" class="img-responsive" alt="Store owner in store">
       </div>
   </div>
     <div class="row margin-top">
         <div class="col-sm-6">
-            <img src="{{ site.baseurl }}/pictures/fruitsAndveg.JPG" class="img-responsive" alt="TODO">
+            <img src="{{ site.baseurl }}/pictures/fruitsAndveg.JPG" class="img-responsive" alt="Fruits and vegetables on the shelf">
         </div>
         <div class="col-sm-6 mobile-margin">
-             <img src="{{ site.baseurl }}/pictures/atm.JPG" class="img-responsive" alt="TODO">
+             <img src="{{ site.baseurl }}/pictures/atm.JPG" class="img-responsive" alt="In-store ATM machine">
         </div>
     </div>
     <div class="row margin-top">
         <div class="col-sm-12">
-            <img src="{{ site.baseurl }}/pictures/folgers.JPG" class="img-responsive" alt="TODO">
+            <img src="{{ site.baseurl }}/pictures/folgers.JPG" class="img-responsive" alt="Folgers coffee on the shelf">
         </div>
     </div>
 
