Add meta description to each individual page

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: About Us
+description: Y-Not Foods carries all your essential groceries. We also sell lottery tickets, scratch tickets, and tobacco.
 ---
+
 <div class="container no-padding">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
