--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Gallery
+description: Y-Not Foods has a wide variety of products for sale. We also have an ATM for your conveniece.
 ---
 
 <div class="container">
