--- a/location/index.html
+++ b/location/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Location &amp; Contact
+description: Y-Not Foods is located at 501 Ellice Avenue. We are open 8:30AM-9:00PM on weekdays and 9:00AM-9:00PM on weekends. 
 ---
 
 <div class="container">
