--- a/location/index.html
+++ b/location/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 title: Location &amp; Contact
-description: Y-Not Foods is located at 501 Ellice Avenue. We are open 8:30AM-9:00PM on weekdays and 9:00AM-9:00PM on weekends. 
+description: Y-Not Foods is located at 501 Ellice Avenue. We are open 8:30AM-9:00PM on weekdays and 9:00AM-9:00PM on weekends.
 ---
 
 <div class="container">
     <div class="row">
         <div class="col-sm-6 footer-section">
-            <strong>Hours of Operation</strong><br>
+            <strong><u>Hours of Operation</u></strong><br>
             <div class="row">
                 <div class="col-xs-3 col-sm-3">
                     Monday<br>
@@ -31,7 +31,7 @@ description: Y-Not Foods is located at 501 Ellice Avenue. We are open 8:30AM-9:0
         </div>
         <div class="col-sm-6 footer-section">
             <address>
-                <strong>Y-Not Foods</strong><br>
+                <strong><u>Y-Not Foods</u></strong><br>
                 501 Ellice Ave<br>
                 Winnipeg, MB, R3B 1Y8<br>
                 (204) 774-0058<br>
