--- a/index.html
+++ b/index.html
@@ -2,27 +2,55 @@
 layout: default
 ---
 
+<!--
 <div class="w3-content w3-display-container">
-  <img class="mySlides center-block img-responsive" src="{{ site.baseurl }}/pictures/sunnyAndyong.JPG">
-  <img class="mySlides center-block img-responsive" src="{{ site.baseurl }}/pictures/momsolo.JPG" >
-  <img class="mySlides center-block img-responsive" src="{{ site.baseurl }}/pictures/folgers.JPG" >
-  <img class="mySlides center-block img-responsive" src="{{ site.baseurl }}/pictures/atm.JPG" >
-  <img class="mySlides center-block img-responsive" src="{{ site.baseurl }}/pictures/fruitsAndveg.JPG" >
+  <img class="mySlides center-block img-responsive w3-animate-fading" src="{{ site.baseurl }}/pictures/folgers.JPG">
+  <img class="mySlides center-block img-responsive w3-animate-fading" src="{{ site.baseurl }}/pictures/sunnyAndyong.JPG" >
+  <img class="mySlides center-block img-responsive w3-animate-fading" src="{{ site.baseurl }}/pictures/momsolo.JPG" >
+  <img class="mySlides center-block img-responsive w3-animate-fading" src="{{ site.baseurl }}/pictures/atm.JPG" >
+  <img class="mySlides center-block img-responsive w3-animate-fading" src="{{ site.baseurl }}/pictures/fruitsAndveg.JPG" >
 
-  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(5)"></span>
-  </div>
-
-<script type="text/javascript">
-currentDiv(1);
-</script>
+  <script type="text/javascript">
+  carousel();
+  </script>
 </div>
+-->
+<div class="container">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active center-block">
+        <img src="{{ site.baseurl }}/pictures/sunnyAndyong.JPG" alt="Owners in front of Y-Not" >
+      </div>
+
+      <div class="item">
+        <img src="{{ site.baseurl }}/pictures/momsolo.JPG" alt="Inside the store" >
+      </div>
+
+      <div class="item">
+        <img src="{{ site.baseurl }}/pictures/folgers.JPG" alt="Picture of products" >
+      </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
 
 <div class="container">
     <h2>Y-Not Foods</h2>
