--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,7 +4,7 @@ title: About Us
 description: Y-Not Foods carries all your essential groceries. We also sell lottery tickets, scratch tickets, and tobacco.
 ---
 
-<div class="container no-padding">
+<div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
             <img src="{{ site.baseurl }}/pictures/storefront.JPG" class="center-block img-responsive" alt="Storefront of Y-Not Foods">
