Add Covid Message

--- a/location/index.html
+++ b/location/index.html
@@ -7,7 +7,7 @@ description: Y-Not Foods is located at 501 Ellice Avenue. We are open 8:30AM-9:0
 <div class="container">
     <div class="row">
         <div class="col-sm-6 footer-section">
-            <strong><u>Hours of Operation</u></strong><br>
+            <div class='info-padding'><strong><u>Hours of Operation</u></strong><br></div>
             <div class="row">
                 <div class="col-xs-3 col-sm-3">
                     Monday<br>
@@ -19,19 +19,21 @@ description: Y-Not Foods is located at 501 Ellice Avenue. We are open 8:30AM-9:0
                     Sunday<br>
                 </div>
                 <div class="col-xs-9 col-sm-9">
-                    8:30AM-8PM<br>
-                    8:30AM-8PM<br>
-                    8:30AM-8PM<br>
-                    8:30AM-8PM<br>
-                    8:30AM-8PM<br>
-                    9AM-8PM<br>
-                    9AM-8PM<br>
+                    9:00AM - 7:00PM<br>
+                    9:00AM - 7:00PM<br>
+                    9:00AM - 7:00PM<br>
+                    9:00AM - 7:00PM<br>
+                    9:00AM - 7:00PM<br>
+                    9:00AM - 7:00PM<br>
+                    9:00AM - 7:00PM<br>
                 </div>
-            </div>
+            </div> <br>
+
+            <div class='covid-message'>*Hours reflect changes due to Covid-19<br></div>
         </div>
         <div class="col-sm-6 footer-section">
             <address>
-                <strong><u>Y-Not Foods</u></strong><br>
+                <div class='info-padding'><strong><u>Y-Not Foods</u></strong><br></div>
                 501 Ellice Ave<br>
                 Winnipeg, MB, R3B 1Y8<br>
                 (204) 774-0058<br>
